@@ -2,19 +2,15 @@ package ar.com.mercadolibre.socialmeli.exception;
 
 import ar.com.mercadolibre.socialmeli.dto.exception.ExceptionDTO;
 import ar.com.mercadolibre.socialmeli.dto.exception.ValidationResponseDTO;
-import jakarta.validation.ConstraintViolation;
 import jakarta.validation.ConstraintViolationException;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.MethodArgumentNotValidException;
 import org.springframework.web.bind.annotation.ControllerAdvice;
 import org.springframework.web.bind.annotation.ExceptionHandler;
-import org.springframework.web.method.annotation.HandlerMethodValidationException;
 
-import java.util.HashMap;
 import java.util.List;
-import java.util.Map;
-import java.util.stream.Collectors;
+
 
 @ControllerAdvice
 public class GlobalExceptionHandler {
@@ -37,7 +33,6 @@ public class GlobalExceptionHandler {
         return new ResponseEntity<>(dto, HttpStatus.BAD_REQUEST);
     }
 
-
     @ExceptionHandler(MethodArgumentNotValidException.class)
     public ResponseEntity<List<ValidationResponseDTO>> invalidArg(MethodArgumentNotValidException ex) {
 
@@ -55,15 +50,18 @@ public class GlobalExceptionHandler {
     }
 
     @ExceptionHandler(ConstraintViolationException.class)
-    public ResponseEntity<ExceptionDTO> handleConstraintViolation(ConstraintViolationException ex) {
-        List<String> errorMessages = ex.getConstraintViolations().stream()
-                .map(ConstraintViolation::getMessage)
-                .collect(Collectors.toList());
+    public ResponseEntity<List<ValidationResponseDTO>> handleConstraintViolation(ConstraintViolationException ex) {
+        List<ValidationResponseDTO> errors = ex.getConstraintViolations().stream()
+                .map(violation -> ValidationResponseDTO.builder()
+                        .argument(violation.getPropertyPath().toString())
+                        .message(violation.getMessage())
+                        .rejectedValue(violation.getInvalidValue())
+                        .build())
+                .toList();
 
-        String combinedMessage = String.join(", ", errorMessages);
-        ExceptionDTO dto = new ExceptionDTO(combinedMessage);
-        return new ResponseEntity<>(dto, HttpStatus.BAD_REQUEST);
+        return ResponseEntity.badRequest().body(errors);
     }
+
 
 
 }
